--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -40,18 +40,60 @@
   </div>
 
   {{!-- products --}}
-  <section class="n-products my-5">
+
+{{!-- <section style="background-color: #eee;"></section>
+  <div class="text-center container py-5">
+    <h4 class="mt-4 mb-5"><strong>Bestsellers</strong></h4>
+
+    <div class="row">
+      <div class="col-lg-4 col-md-12 mb-4">
+        <div class="card">
+          {{#each products}}
+          <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"  data-mdb-ripple-color="light">
+                 <img class="img-fluid" src="/images/{{this._id}}.png"  style="height: 18rem; width: fit-content;">
+                      <a href="/view-each-product/{{this._id}}" style="text-decoration: none; color: inherit;">
+
+              <div class="mask">
+                <div class="d-flex justify-content-start align-items-end h-100">
+                  <h5><span class="badge bg-primary ms-2">New</span></h5>
+                </div>
+              </div>
+              <div class="hover-overlay">
+                <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+              </div>
+            </a>
+          </div>
+          <div class="card-body">
+            <a href="" class="text-reset">
+              <h5 class="card-title mb-3">{{this.name}}</h5>
+            </a>
+            <div class="stars"></div>
+            <a href=""><i class="ri-star-s-fill"></i></a>
+            <a href=""><i class="ri-star-s-fill"></i></a>
+            <a href=""><i class="ri-star-s-fill"></i></a>
+            <a href=""><i class="ri-star-s-fill"></i></a>
+            <a href=""><i class="ri-star-s-fill"></i></a>
+            <a href="">4.5/5</a>
+          </div>
+            <h6 class="mb-3">{{this.price}}</h6>
+         <button onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" class="button">Add to cart
+
+          </div>
+        </div>
+      </div> --}}
+
+
+  {{!-- <section class="n-products my-5">
     <div class="center-text col-12 col-md-12 col-lg-12">
-      <h2>All Products</h2>
+      <h2 class="h2">All Products</h2>
     </div>
     <div class="n-content">
       <div class="row ">
         {{#each products}}
-        <div class=" product-card col-12 col-md-4 col-lg-4">
-          <a href="/view-each-product/{{this._id}}" style="text-decoration: none; color: inherit;">
+        <div class=" product-card col-12 col-md-4 col-lg-4  mt-1 pe-4">
             <div class="n-content">
               <div class="row-img">
-                <img class="img-fluid" src="/images/{{this._id}}.png" alt="Card image cap" style="height: 18rem; width: fit-content;">
+                <img class="img-fluid" src="/images/{{this._id}}.png"  style="height: 18rem; width: fit-content;">
                 <div class="card-body">
                   <h5 class="card-title">{{this.name}}</h5>
                 </div>
@@ -83,10 +125,54 @@
         <a href="/view-all-products" id="view-all-btn" class="btn2">View All <i class="ri-arrow-right-line"></i></a>
       </div>
     </div>
-  </section>
+  </section> --}}
+
+ <section class="product">
+  <div class="container py-2">
+    <div class="row py-5">
+      <div class="col-lg-5 m-auto text-center">
+        <h1 class="h1">All Products</h1>
+      </div>
+    </div>
+    <div class="row">
+      {{#each products}}
+      <div class="col-lg-3 col-md-3 mb-2 product-card">
+        <div class="card border-0 h-100 d-flex flex-column">
+          <div class="card-body">
+            <img class="img-fluid" src="/images/{{this._id}}.png" style="height: 14rem; object-fit: cover;">
+          </div>
+          <!-- Product name with fixed height using Bootstrap -->
+          <h6 class=" h6 text-center mb-2" style="min-height: 2rem;">
+            {{this.name}}
+          </h6>
+          <!-- Button and price aligned using Bootstrap -->
+          <div class="d-flex justify-content-between align-items-center px-3 mb-3">
+            <button 
+              onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" 
+              class="btn btn-dark btn-sm">
+              Add to cart
+            </button>
+            <p class="mb-0">{{this.price}}</p>
+          </div>
+        </div>
+      </div>
+      {{/each}}
+    </div>
+
+    <div class="row">
+      <div class="col-lg-6 col-12 col-md-12 text-center m-auto mt-6">
+        <a href="/view-all-products" id="view-all-btn" class="btn btn-outline-dark">
+          View All <i class="ri-arrow-right-line"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
   {{!-- feature --}}
- <section class="feature my-5">
+ <section class="feature my-0  ">
   <div class="feature-content">
     <div class="row d-flex justify-content-center align-items-center text-center">
       <div class="box col-12 col-md-4 col-lg-4 mb-4">
@@ -120,8 +206,8 @@
 
 {{!-- footer --}}
 
-<section class="footer my-5 ">
-  <div class="footer-box col-3  col-md-3">
+<section class="footer my-5 container ">
+  <div class="footer-box col-3  col-md-6">
     <h3>Company</h3>
     <a href="#">About</a>
     <a href="#">Features</a>
@@ -129,7 +215,7 @@
     <a href="#">Carrer</a>
   </div>
 
-<div class="footer-box col-3 col-md-3">
+<div class="footer-box col-3 col-md-6">
     <h3>Company</h3>
     <a href="#">About</a>
     <a href="#">Features</a>
@@ -137,14 +223,14 @@
     <a href="#">Carrer</a>
   </div>
 
-  <div class="footer-box col-3 col-md-3 ">
+  <div class="footer-box col-3 col-md-6 ">
     <h3>Resources</h3>
     <a href="#">Youtube Playlist</a>
     <a href="#">Features</a>
     <a href="#">Works</a>
   </div>
 
-  <div class="footer-box  col-3 col-md-3">
+  <div class="footer-box  col-3 col-md-6">
     <h3>Social</h3>
     <div class="social">
       <a href="#"><i class="ri-facebook-fill"></i></a>
@@ -172,60 +258,6 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-@media (max-width: 576px) {
-  .row img {
-    width: 2rem; /* Further reduce the size for smaller screens */
-    height: 2rem;
-  }
-  .card-title{
-    font-size: 1.1rem;
-  }
-  .stars{
-    position: relative;
-    top: -8px;
-    left: -9%;
-  }
-.button{
-  width: 8rem;
-  height: 2.5rem;
-  font-size: medium;
-  position: relative;
-    top: -35px;
-    left: -26px;
-}
- .row-right{
-  position: relative;
-    top: -35px;
-    left:-15px;
-    font-size: medium;
- } 
-  .ri-customer-service-fill{
-    font-size: 3rem
-  }
-  .ri-truck-fill{
-    font-size: 3rem;
-  }
-  .ri-bank-card-fill{
-    font-size: 3rem;
-  }
-  .feature{
-    position: relative;
-    top: -45px;
-  }
-  .footer{
-    position: relative;
-    top: -10rem;
-    left: -1rem;
-  }
-  .end-text{
-    position: relative;
-    top: -15rem;
-    left:-1.9rem
-  }
- .home-text{
-  margin-top: 1rem;
- }
-}
 
 :root {
   --bg-color: #ffffff;
@@ -239,12 +271,33 @@
   --h2-font: 3.5rem;
   --p-font: 1rem;
 }
-
+.btn1{
+  height: 30px;
+  width: 55%;
+  border: none;
+  outline: none;
+  background-color: #000000;
+  color: #f0f0f0;
+  font-weight: 400;
+  border-radius: 15px;
+}
+.btn1:hover{
+  background-color:#616060;
+  transition: 0.5s;
+  
+}
+.card:hover{
+   box-shadow: -2px -1px 25px -4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: -2px -1px 25px -4px rgba(0, 0, 0, 0.2);
+     -moz-box-shadow: -2px -1px 25px -4px rgba(0, 0, 0, 0.2);
+     transition: 0.5s;
+}
 
 body,section, html {
   overflow-x: hidden;
   margin-top: 0;
   padding-top: 0;
+  padding-bottom: 0;
 }
 
 .carousel-item img {
@@ -282,12 +335,14 @@ body,section, html {
   margin-bottom: 25px;
 }
 
-.btn {
-  padding: 14px 42px;
+.btnn {
+  height: 28px;
+  width: 55%;
   background-color: var(--text-color);
   color: var(--bg-color);
-  border-radius: 30px;
-  font-weight: 500;
+  font-weight: 400;
+  border-radius: 15px;
+  margin-top: 0;
 
 }
 .n-btn {
@@ -334,11 +389,11 @@ body,section, html {
 
 @media screen and (max-width: 768px) {
   .carousel-item img {
-    height: 50vh; /* Make carousel images shorter on smaller screens */
+    height: 55vh; /* Make carousel images shorter on smaller screens */
   }
 .home-text {
     padding: 20px;
-    top: 10%; /* Adjust spacing */
+    top: 18%; /* Adjust spacing */
   }
 
   .home-text h1 {
@@ -354,11 +409,8 @@ body,section, html {
   .home-text p {
     font-size: 0.9rem;
   }
-
-  .btn {
-    padding: 10px 30px; /* Adjust button padding */
-  }
 }
+
 
 @media screen and (max-width: 480px) {
   .home-text h1 {
@@ -373,9 +425,7 @@ body,section, html {
     font-size: 0.8rem;
   }
 
-  .btn {
-    padding: 8px 24px; /* Further adjust button padding */
-  }
+
 }
 
 /* Other Styles */
@@ -449,18 +499,13 @@ section {
 
 .end-text p {
   font-size: 15px;
-  padding-left: 90px;
 }
 
 .center-text {
   text-align: center;
 }
 
-.center-text h2 {
-  font-size: 2.6rem;
-  font-weight: 700;
-  padding-bottom: 50px;
-}
+
   .product-card {
   display: none; /* Hide all product cards initially */
    padding-bottom: 5px; 
@@ -469,16 +514,9 @@ section {
 .product-card.visible {
   display: block; /* Show product cards when the "visible" class is added */
 }
- .n-products{
-        padding-left: 290px;
-        margin-top: 30px;
-    }
+
     
 @media (max-width: 576px) {
-  .n-products {
-    padding-left: 5rem; /* Even less padding for small screens */
-    margin-top: 30px;   /* Adjust margin for small screens */
-  }
   .center-text h2{
     font-size: 2rem;
   }
@@ -488,14 +526,8 @@ section {
         align-items:center;
        
       }
-      .row-img{
-        overflow: hidden;
-        border-radius: 28px;
-        margin-bottom: 15px;
-      }
+      
       .row-img img{
-        display:block;
-        width: 100%;
         transition: transform 0.5s;
         cursor: pointer;
       }
@@ -512,7 +544,7 @@ section {
       }
       .card-title{
         position: relative;
-    left: -20px;
+       left: -20px;
       }
       .stars a{
         font-size:16px;
@@ -528,36 +560,10 @@ section {
         justify-content: space-between;
         margin-top: 5px;
       }
-      
-      
-      
       .row-right:hover{
         transform: scale(1.1);
       }
      
-
-  .button {
-  color: var(--second-color);    
-  font-size: 15px;                
-  background-color: transparent;  
-  padding: 10px 15px;             
-  border: 2px solid var(--text-color); 
-  border-radius: 4px;             
-  cursor: pointer;                
-  transition: all 0.3s ease;      
-  display: flex;                 
-  align-items: center;            
-  }
-.button:hover{
-  transform: scale(1.1);
-}
-
-
-.button i {
-  margin-left: 6px;      /* Add space between text and icon */
-}
-
-
 </style>
 <script>
 document.addEventListener("DOMContentLoaded", function() {
@@ -565,7 +571,7 @@ document.addEventListener("DOMContentLoaded", function() {
   var viewAllBtn = document.getElementById('view-all-btn');
 
   // Show the first 3 products initially
-  var limit = 3;
+  var limit = 4;
   for (var i = 0; i < limit; i++) {
     if (productCards[i]) {
       productCards[i].classList.add('visible');
