updation in pages

--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -21,7 +21,7 @@
             <h6>New Arrivals</h6>
             <h1>New Arrivals <br> ready to rock</h1>
             <p>Productivity and Efficiency: Electronic gadgets like laptops and tablets enable people to work efficiently, manage tasks, and organize schedules.</p>
-            <a href="/view-all-products" class="btn"> Shop now
+            <a href="/view-all-products" class="btn btn-outline-dark"> Shop now
               <i class="ri-arrow-right-line"></i>
             </a>
           </div>
@@ -206,7 +206,7 @@
 
 {{!-- footer --}}
 
-<section class="footer my-5 container ">
+<section class="footer  ms-3 container ">
   <div class="footer-box col-3  col-md-6">
     <h3>Company</h3>
     <a href="#">About</a>
@@ -245,7 +245,7 @@
 {{!-- copyright --}}
 
 <div class="copyright">
-  <div class="end-text">
+  <div class="text-center">
     <p>copyright 2024 <i class="ri-copyright-line"></i></p>
   </div>
 </div>
@@ -488,14 +488,7 @@ section {
   color: var(--bg-color);
 }
 
-.copyright {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  gap: 20px;
-  padding: 20px 14%;
-}
+
 
 .end-text p {
   font-size: 15px;
