--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -206,7 +206,7 @@
 
 {{!-- footer --}}
 
-<section class="footer  ms-3 container ">
+<section class="footer  container ">
   <div class="footer-box col-3  col-md-6">
     <h3>Company</h3>
     <a href="#">About</a>
