--- a/views/user/view-all-products.hbs
+++ b/views/user/view-all-products.hbs
@@ -1,4 +1,4 @@
-<section class="n-products my-5">
+{{!-- <section class="n-products my-5">
   <div class="row mt-5">
     {{#each products}}
       <div class="col-6 col-md-3 mb-4"> <!-- 2 cards on small screens, 4 on medium and larger -->
@@ -8,7 +8,7 @@
               <img class="card-img-top" src="/images/{{this._id}}.png" alt="Card image cap">
             </div>
             <div class="card-body">
-              <h5 class="card-title">{{this.name}}</h5>
+              <h5 class="h5" style="max-height: 6rem;">{{this.name}}</h5>
               <div class="stars">
                 <a href=""><i class="ri-star-s-fill"></i></a>
                 <a href=""><i class="ri-star-s-fill"></i></a>
@@ -19,7 +19,7 @@
               </div>
               <div class="row-in col-12">
                 <div class="row-left col-8">
-                  <button onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" class="button">Add to cart
+                  <button onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" class="btn btn-dark btn-sm">Add to cart
                     <i class="ri-shopping-cart-fill"></i>
                   </button>
                 </div>
@@ -137,6 +137,66 @@
       max-width: 70%; /* Further scale down images for extra small screens */
     }
   }
+</style>
+
+ --}}
+
+<section class="product">
+  <div class="container py-2">
+    <div class="row">
+      {{#each products}}
+      
+      <div class="col-lg-3 col-md-3 col-6 mb-2">
+                <a href="/view-each-product/{{this._id}}" style="text-decoration: none; color: inherit;">
+        <div class="card border-0 h-100 d-flex flex-column">
+          <div class="card-body">
+            <img class="img-fluid" src="/images/{{this._id}}.png" style="max-width: 100%; height: 200px; object-fit:contain">
+          </div>
+          <!-- Product name with fixed height using Bootstrap -->
+          <h6 class=" h6 text-center mb-2 " style="min-height: 2rem;">
+            {{this.name}}
+          </h6>
+          <!-- Button and price aligned using Bootstrap -->
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <button 
+              onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" 
+              class="btn btn-dark btn-sm ms-2">
+              Add to cart
+            </button>
+            <p class="mb-0"> ₹ {{this.price}}</p>
+          </div>
+        </div>
+         </a>
+      </div>
+      
+      {{/each}}
+    </div>
+   
+  </div>
+</section>
+
+<style>
+  .btn1{
+  height: 30px;
+  width: 55%;
+  border: none;
+  outline: none;
+  background-color: #000000;
+  color: #f0f0f0;
+  font-weight: 400;
+  border-radius: 15px;
+}
+.btn1:hover{
+  background-color:#616060;
+  transition: 0.5s;
+  
+}
+.card:hover{
+   box-shadow: -2px -1px 25px -4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: -2px -1px 25px -4px rgba(0, 0, 0, 0.2);
+     -moz-box-shadow: -2px -1px 25px -4px rgba(0, 0, 0, 0.2);
+     transition: 0.5s;
+}
 </style>
 
 <script>
