--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
   {{#if admin}}
-  <nav class=" col-12 navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="col-12 navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <button class="navbar-toggler me-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
         <span class="navbar-toggler-icon"></span>
@@ -20,9 +20,7 @@
         <form class="form-inline my-2 my-lg-0 ms-auto">
           <div class="input-group my-3 my-lg-0">
             <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-primary" type="button"><i class="ri-search-line"></i></button>
-            </div>
+            <button class="btn btn-primary" type="button"><i class="ri-search-line"></i></button>
           </div>
         </form>
         <ul class="navbar-nav">
@@ -70,6 +68,8 @@
             <div class="collapse" id="collapseSiteManagement">
               <ul class="navbar-nav ps-3">
                 <li><a href="/admin/view-admin-product" class="nav-link px-3"><i class="ri-layout-column-line me-2"></i> Manage Products</a></li>
+                <li><a href="/admin/view-trending-products" class="nav-link px-3"><i class="ri-layout-column-line me-2"></i> Trending products</a></li>
+                <li><a href="/admin/view-best-seller" class="nav-link px-3"><i class="ri-layout-column-line me-2"></i> Best sellers</a></li>
               </ul>
             </div>
           </li>
