changes in ui and admin page

--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -169,7 +169,7 @@
       </ul>
        </div>
 
-      <div class="d-flex align-items-center"  >
+      <div class="d-flex align-items-center px-2">
         <a href="#"><i class="ri-search-line "></i></a>
         <a href="/cart">
           <i class="ri-shopping-cart-line" style="padding-left: 0.2rem;"></i>
