--- a/views/user/view-all-products.hbs
+++ b/views/user/view-all-products.hbs
@@ -176,7 +176,7 @@
 </section>
 
 <style>
-  .btn1{
+  .btn{
   height: 30px;
   width: 55%;
   border: none;
@@ -186,7 +186,7 @@
   font-weight: 400;
   border-radius: 15px;
 }
-.btn1:hover{
+.btn:hover{
   background-color:#616060;
   transition: 0.5s;
   
