--- a/views/user/view-each-product.hbs
+++ b/views/user/view-each-product.hbs
@@ -4,7 +4,7 @@
     <div class="row gx-5">
       <aside class="col-lg-6">
         <div class="product-img border rounded-4 mb-3 d-flex justify-content-center img-container">
-          <a data-fslightbox="mygalley" class="rounded-4 zoom" target="_blank" data-type="image" href="/images/{{product._id}}.png">
+          <a data-fslightbox="mygalley" class="rounded-4 zoom" target="_blank" data-type="image" href="/images/{{product._id}}.png " style="max-width: 100%; height: 200px; object-fit:contain">
             <img id="product-image" style="max-width: 100%; max-height: 80vh; margin: auto;" class="rounded-4 fit zoom" src="/images/{{product._id}}.png" />
             <div id="magnifier-lens" class="magnifier-lens"></div>
           </a>
