--- a/views/user/view-order-products.hbs
+++ b/views/user/view-order-products.hbs
@@ -1,4 +1,4 @@
-<section class="products py-5">
+{{!-- <section class="products py-5">
   <div class="container">
     <div class="row gx-5">
       {{#each products}}
@@ -148,4 +148,65 @@
   }
 });
 
-</script>
+</script> --}}
+
+
+
+
+<section class="h-100 gradient-custom"></section>
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+       <div class="d-flex justify-content-between align-items-center mb-4">
+              <h2 class=" col-12 col-xl-12 lead fw-normal mb-0" style="color:black;">Receipt</h2>
+            </div>
+       {{#each products}}
+      <div class="col-lg-12 col-xl-12">
+        <div class="card" style="border-radius: 10px;">
+          <div class="card-body p-4">
+           
+            <div class="card shadow-0 border mb-4">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-md-2 text-center">
+                                                <a  href="/view-each-product/{{this._id}}">
+                    <img src="/images/{{product._id}}.png"
+                      class="img-fluid product-img"  style="max-width: 100%; height: 200px; object-fit:contain " alt="Phone">
+                  </a>
+                  </div>
+                  
+                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
+                    <p class="text-muted mt-2 mb-1 small">{{product.name}}</p>
+                  </div>
+                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
+                    <p class="text-muted mb-0 small">{{product.color}}</p>
+                  </div>
+                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
+                    <p class="text-muted mb-0 small">{{product.brand}}</p>
+                  </div>
+                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
+                    <p class="text-muted mb-0 small">Qty:{{this.quantity}}</p>
+                  </div>
+                  <div class="col-md-2 text-center d-flex justify-content-center align-items-center">
+                    <p class="text-muted mb-0 small">₹ {{product.price}}</p>
+                  </div>
+                </div>
+                <hr class="mb-4" style="background-color: #e0e0e0; opacity: 1;">
+              
+              </div>
+            </div>
+
+
+           
+            
+
+            
+
+           
+          </div>
+         
+        </div>
+      </div>
+      {{/each}}
+    </div>
+  </div>
+</section>
