--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -151,10 +151,10 @@
             
             <button 
               onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" 
-              class="btn btn-dark btn-sm d-inline  "  >
+              class="btn btn-dark btn-sm d-inline m-2 "  >
               Add to cart
             </button>
-            <p class="mb-0"> ₹ {{this.price}}</p>
+            <p class="mb-0 mr-1"> ₹ {{this.price}}</p>
           </div>
         </div>
         </a>
@@ -223,10 +223,10 @@
           <div class="d-flex justify-content-between align-items-center  mb-3" >
             <button 
               onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" 
-              class="btn btn-dark btn-sm " >
+              class="btn btn-dark btn-sm m-2" >
               Add to cart
             </button>
-            <p class="mb-0"> ₹ {{this.price}}</p>
+            <p class="mb-0 m-1"> ₹ {{this.price}}</p>
           </div>
         </div>
         </a>
@@ -302,7 +302,7 @@
             Volt-Cart
           </h6>
           <p class="text-start" style="width: 100%; margin-bottom: 5px;">
-            Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Volt-Cart offers a seamless online shopping experience with a wide range of products, secure payments, and fast delivery. Discover great deals and enjoy hassle-free shopping tailored to your needs.
           </p>
         </div>
         <!-- Grid column -->
@@ -554,6 +554,9 @@ body,section, html {
 /* Other Styles */
 .feature {
   padding: 90px 14% 70px;
+}
+section{
+  padding: 40px 6% 40px ;
 }
 
 .footer {
