updations in admin

--- a/views/admin/in-progress-orders.hbs
+++ b/views/admin/in-progress-orders.hbs
@@ -27,7 +27,7 @@
                             <td>{{this.paymentMethod}}</td>
                             <td>{{this.status}}</td>
                             <td>
-                                <button class="btn btn-sm btn-success" onClick="deliveredOrder('{{this._id}}')">Progress Order</button> <!-- Changed to order ID -->
+                                <button class="btn btn-sm btn-success" onClick="deliveredOrder('{{this._id}}')">delivered</button> <!-- Changed to order ID -->
                               
                             </td>
                         </tr>
