--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -18,10 +18,7 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <form class="form-inline my-2 my-lg-0 ms-auto">
-          <div class="input-group my-3 my-lg-0">
-            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
-            <button class="btn btn-primary" type="button"><i class="ri-search-line"></i></button>
-          </div>
+           <i class="ri-account-circle-line text-light"></i>
         </form>
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
