--- a/views/admin/delivered-orders.hbs
+++ b/views/admin/delivered-orders.hbs
@@ -2,6 +2,7 @@
 <section>
     <div class="container">
         <div class="row mt-4">
+                      <h1 class="h4  mb-4"> DELIVERED ORDERS</h1>
             <div class="table-responsive">
                 <table class="table mt-5">
                     <thead>
