--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -71,7 +71,7 @@
       gap: 10px;
       padding-left: 20rem;
     }
-
+    
     .d-flex a {
       display: inline-block;
       font-size: 22px;
@@ -153,7 +153,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-        <a href="/" class="navbar-brand logo " >Volt-Cart</a>
+        <a href="/" class="navbar-brand logo col-3 px-1 pr-1" >Volt-Cart</a>
 
 
 
@@ -176,8 +176,8 @@
       </ul>
        </div>
 
-      <div class="d-flex align-items-center px-2 pl-1 pr-1">
-        <a href="#"><i class="ri-search-line " style="padding-right: 0.2rem;"></i></a>
+      <div class="d-flex align-items-center  px-1 pl-4 ">
+        <a href="#"><i class="ri-search-line " style="padding-right: 0.2rem; padding-left:1rem"></i></a>
         <a href="/cart">
           <i class="ri-shopping-cart-line" style="padding-left: 0.3rem;"></i>
           <sup><span class="badge bg-success" id="cart-count">{{cartCount}}</span></sup>
