--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -143,18 +143,18 @@
             <img class="img-fluid" src="/images/{{this._id}}.png" style="max-width: 100%; height: 200px; object-fit:contain">
           </div>
           <!-- Product name with fixed height using Bootstrap -->
-          <h6 class=" h6 text-center  mb-2" style="min-height: 2rem;">
+          <h6 class=" h6 text-center  mb-2" style="max-height: 7rem;">
             {{this.name}}
           </h6>
           <!-- Button and price aligned using Bootstrap -->
-          <div class=" d-flex px-md-5 justify-content-between align-items-center mb-3">
+          <div class="  d-flex px-md-5 justify-content-between align-items-center mb-3">
             
             <button 
               onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" 
-              class="btn btn-dark btn-sm d-inline m-2 px-1 py-2 "  >
+              class=" col-5 btn btn-dark btn-sm d-inline m-2 px-1 py-2 "  >
               Add to cart
             </button>
-            <p class="mb-0"> ₹ {{this.price}}</p>
+            <p class="mb-0  "> ₹ {{this.price}}</p>
           </div>
         </div>
         </a>
