--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -223,7 +223,7 @@
           <div class="  px-md-5 d-flex justify-content-between align-items-center  mb-3" >
             <button 
               onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" 
-              class="btn btn-dark btn-sm m-2 px-1 py-2" >
+              class=" col-5 btn btn-dark btn-sm m-2 px-1 py-2" >
               Add to cart
             </button>
             <p class="mb-0"> ₹ {{this.price}}</p>
