--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -147,14 +147,14 @@
             {{this.name}}
           </h6>
           <!-- Button and price aligned using Bootstrap -->
-          <div class="  d-flex px-md-5 justify-content-between align-items-center mb-3">
+          <div class="  d-flex  justify-content-between align-items-center mb-3">
             
             <button 
               onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" 
-              class=" col-5 btn btn-dark btn-sm d-inline m-2 px-1 py-2 "  >
+              class=" col-5  btn btn-dark btn-sm d-inline m-2 px-1 py-2 "  >
               Add to cart
             </button>
-            <p class="mb-0  "> ₹ {{this.price}}</p>
+            <p class="mb-0 pr-1 "> ₹ {{this.price}}</p>
           </div>
         </div>
         </a>
@@ -226,7 +226,7 @@
               class=" col-5 btn btn-dark btn-sm m-2 px-1 py-2" >
               Add to cart
             </button>
-            <p class="mb-0"> ₹ {{this.price}}</p>
+            <p class="mb-0 pr-1"> ₹ {{this.price}}</p>
           </div>
         </div>
         </a>
