--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -220,7 +220,7 @@
             {{this.name}}
           </h6>
           <!-- Button and price aligned using Bootstrap -->
-          <div class="  px-md-5 d-flex justify-content-between align-items-center  mb-3" >
+          <div class="   d-flex justify-content-between align-items-center  mb-3" >
             <button 
               onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" 
               class=" col-5 btn btn-dark btn-sm m-2 px-1 py-2" >
@@ -321,7 +321,7 @@
         <hr class="w-100 clearfix d-md-none" />
 
         <!-- Grid column for Help -->
-        <div class="col-md-3 col-lg-3 col-xl-3">
+        <div class="col-md-2 col-lg-2 col-xl-2">
           <h6 class="text-uppercase mb-2 font-weight-bold">Help</h6>
           <p>Payment</p>
           <p>Shipping</p>
@@ -331,7 +331,7 @@
         <!-- Grid column -->
 
         <!-- Grid column for Social Links -->
-        <div class="col-md-3 col-lg-3 col-xl-3 text-center social">
+        <div class="col-md-3 col-lg-4 col-xl-4 text-center social">
           <h6 class="text-uppercase mb-3 font-weight-bold">Follow us</h6>
           <!-- Facebook -->
           <a
