--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -176,10 +176,10 @@
       </ul>
        </div>
 
-      <div class="d-flex align-items-center  px-1 pl-4 ">
+      <div class=" col-5 col-lg-2 col-md-2   d-flex align-items-center  px-1 ">
         <a href="#"><i class="ri-search-line " style="padding-right: 0.2rem; padding-left:1rem"></i></a>
         <a href="/cart">
-          <i class="ri-shopping-cart-line" style="padding-left: 0.3rem;"></i>
+          <i class="ri-shopping-cart-line" style="padding-left: 0.4rem;"></i>
           <sup><span class="badge bg-success" id="cart-count">{{cartCount}}</span></sup>
         </a>
             <li class="nav-item dropdown" style="list-style-type: none">
